update java instructions